PS4 Final Submission

--- a/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
+++ b/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
@@ -631,54 +631,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ĝ_sim_twins, Σ̂_sim_twins = let\n",
+    "ĝ_sim_twins, Σ̂_sim_twins = let\n",
     "\n",
     "    # initialize -\n",
     "    local_list_of_tickers = my_list_of_twin_tickers;\n",
     "    N = length(local_list_of_tickers); # number of assets in portfolio\n",
     "    μ_sim = Array{Float64,1}(); # drift vector\n",
     "    Σ̂_sim = Array{Float64,2}(undef, N, N); # covariance matrix for *our* portfolio\n",
-    "    Ḡₘ = mean(Gₘ); # average market factor -\n",
+    "    Ḡₘ = mean(Gₘ); # average market factor -\n",
     "    σ²ₘ = var(Gₘ); # variance of market factor\n",
     "\n",
-    "    # TODO: Uncomment to compute the expected growth rate (return) for each of our tickers -\n",
-    "    # TODO: Once you uncommented the code below, don't forget to comment out the ErrorException line\n",
-    "    throw(ErrorException(\"Ooops! Need to compute the expected growth rate (return) for each of our tickers\"));\n",
     "    # compute the expected growth rate (return) for each of our tickers -\n",
-    "    # for i ∈ eachindex(local_list_of_tickers)\n",
-    "    #     ticker = local_list_of_tickers[i];\n",
-    "    #     data = sim_model_parameters[ticker]; # get the data for this ticker\n",
-    "    #     αᵢ = data.alpha; # get alpha\n",
-    "    #     βᵢ = data.beta; # get beta\n",
-    "    #     Ḡᵢ = αᵢ + βᵢ* Ḡₘ; # compute the growth rate for this ticker\n",
-    "    #     push!(μ_sim, Ḡᵢ); # append drift value to μ_sim\n",
-    "    # end\n",
+    "    for i ∈ eachindex(local_list_of_tickers)\n",
+    "        ticker = local_list_of_tickers[i];\n",
+    "        data = sim_model_parameters[ticker]; # get the data for this ticker\n",
+    "        αᵢ = data.alpha; # get alpha\n",
+    "        βᵢ = data.beta; # get beta\n",
+    "        Ḡᵢ = αᵢ + βᵢ* Ḡₘ; # compute the growth rate for this ticker\n",
+    "        push!(μ_sim, Ḡᵢ); # append drift value to μ_sim\n",
+    "    end\n",
     "\n",
-    "    # TODO: Uncomment to compute the covariance matrix using the single index model -\n",
-    "    # TODO: Once you uncommented the code below, don't forget to comment out the ErrorException line\n",
-    "    throw(ErrorException(\"Ooops! Need to compute the expected growth rate (return) for each of our tickers\"));\n",
     "    # compute the covariance matrix using the single index model -\n",
-    "    # for i ∈ eachindex(local_list_of_tickers)\n",
+    "    for i ∈ eachindex(local_list_of_tickers)\n",
     "\n",
-    "    #     ticker_i = local_list_of_tickers[i];\n",
-    "    #     data_i = sim_model_parameters[ticker_i]; # get the data for ticker i\n",
-    "    #     βᵢ = data_i.beta; # get beta for ticker i\n",
-    "    #     σ²_εᵢ = (Δt)*data_i.training_variance; # residual variance for ticker i\n",
+    "        ticker_i = local_list_of_tickers[i];\n",
+    "        data_i = sim_model_parameters[ticker_i]; # get the data for ticker i\n",
+    "        βᵢ = data_i.beta; # get beta for ticker i\n",
+    "        σ²_εᵢ = (Δt)*data_i.training_variance; # residual variance for ticker i\n",
     "\n",
-    "    #     for j ∈ eachindex(local_list_of_tickers)\n",
+    "        for j ∈ eachindex(local_list_of_tickers)\n",
     "            \n",
-    "    #         ticker_j = local_list_of_tickers[j];\n",
-    "    #         data_j = sim_model_parameters[ticker_j]; # get the data for ticker j\n",
-    "    #         βⱼ = data_j.beta; # get beta for ticker j\n",
-    "    #         σ²_εⱼ = (Δt)*data_j.training_variance; # residual variance for ticker j\n",
+    "            ticker_j = local_list_of_tickers[j];\n",
+    "            data_j = sim_model_parameters[ticker_j]; # get the data for ticker j\n",
+    "            βⱼ = data_j.beta; # get beta for ticker j\n",
+    "            σ²_εⱼ = (Δt)*data_j.training_variance; # residual variance for ticker j\n",
     "            \n",
-    "    #         if i == j\n",
-    "    #             Σ̂_sim[i,j] = βᵢ*βⱼ*σ²ₘ + σ²_εᵢ; # diagonal elements\n",
-    "    #         else\n",
-    "    #             Σ̂_sim[i,j] = βᵢ*βⱼ*σ²ₘ; # off-diagonal elements\n",
-    "    #         end\n",
-    "    #     end\n",
-    "    # end\n",
+    "            if i == j\n",
+    "                Σ̂_sim[i,j] = βᵢ*βⱼ*σ²ₘ + σ²_εᵢ; # diagonal elements\n",
+    "            else\n",
+    "                Σ̂_sim[i,j] = βᵢ*βⱼ*σ²ₘ; # off-diagonal elements\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
     "\n",
     "    (μ_sim, Σ̂_sim*Δt); # return\n",
     "end;"
@@ -1075,27 +1069,25 @@
     "    efficient_frontier = efficient_frontier_sim_twins; # alias the efficient frontier\n",
     "    local_list_of_tickers = my_list_of_twin_tickers; # alias the ticker list\n",
     "\n",
-    "    # TODO: Build the results array -\n",
-    "    # TODO: Uncomment to build the results array for the twin tickers. Once done, don't forget to comment out the ErrorException line\n",
-    "    throw(ErrorException(\"Ooops! Need to build the results array for the twin tickers\"));\n",
-    "    # number_of_portfolios = length(efficient_frontier); # how many portfolios do we have? (these all exited correctly)\n",
-    "    # M = length(local_list_of_tickers); # how many tickers do we have?\n",
-    "    # results_array = Array{Float64,2}(undef, number_of_portfolios, M+2);\n",
-    "    # risk_array_sorted = keys(efficient_frontier) |> collect |> sort;\n",
+    "    # Build the results array -\n",
+    "    number_of_portfolios = length(efficient_frontier); # how many portfolios do we have? (these all exited correctly)\n",
+    "    M = length(local_list_of_tickers); # how many tickers do we have?\n",
+    "    results_array = Array{Float64,2}(undef, number_of_portfolios, M+2);\n",
+    "    risk_array_sorted = keys(efficient_frontier) |> collect |> sort;\n",
     "\n",
-    "    # for i ∈ eachindex(risk_array_sorted)\n",
-    "    #     risk_value = risk_array_sorted[i] |> sqrt; # let's plot the sqrt of the risk\n",
+    "    for i ∈ eachindex(risk_array_sorted)\n",
+    "        risk_value = risk_array_sorted[i] |> sqrt; # let's plot the sqrt of the risk\n",
     "        \n",
-    "    #     data = efficient_frontier[risk_array_sorted[i]] # get the NamedTuple corresponding to this risk level\n",
-    "    #     reward_value = data.reward;\n",
-    "    #     w = data.w;\n",
+    "        data = efficient_frontier[risk_array_sorted[i]] # get the NamedTuple corresponding to this risk level\n",
+    "        reward_value = data.reward;\n",
+    "        w = data.w;\n",
     "\n",
-    "    #     results_array[i,1] = risk_value;\n",
-    "    #     results_array[i,2] = reward_value;\n",
-    "    #     for j ∈ 1:M\n",
-    "    #         results_array[i,2+j] = w[j];\n",
-    "    #     end\n",
-    "    # end\n",
+    "        results_array[i,1] = risk_value;\n",
+    "        results_array[i,2] = reward_value;\n",
+    "        for j ∈ 1:M\n",
+    "            results_array[i,2+j] = w[j];\n",
+    "        end\n",
+    "    end\n",
     "\n",
     "    results_array # return\n",
     "end"
@@ -1320,7 +1312,13 @@
    "id": "72875a88",
    "metadata": {},
    "source": [
-    "__Answers here:__ Put your answers to the discussion questions for task 2 here."
+    "__Answers here:__ \n",
+    "\n",
+    "Looking at the two efficient frontiers in the plot, the primary+twins portfolio (gray) consistently shows better risk-adjusted returns compared to the primary-only portfolio (red). For any given level of risk, the gray frontier achieves higher expected returns, and for any given return target, it requires lower risk. This leftward and upward shift of the efficient frontier demonstrates the power of diversification through low-correlation assets.\n",
+    "\n",
+    "The inclusion of low-correlation twin assets provides significant benefits by reducing the overall portfolio risk without sacrificing expected returns. Since these twin assets were specifically selected to have low correlation with the primary tickers, their price movements tend to be less synchronized with the primary assets. This diversification effect reduces the portfolio's total variance more effectively than simply adding more highly-correlated assets would. The covariance terms in the SIM-based portfolio variance are smaller when assets have lower correlations, leading to better risk-return combinations.\n",
+    "\n",
+    "The diversification through low-correlation assets affects the efficient frontier in two key ways. First, it shifts the frontier to the left, meaning we can achieve the same expected return with less risk. Second, it creates a more favorable curvature, with the frontier extending further upward, allowing access to higher return levels that maintain reasonable risk levels. This improved efficient frontier represents genuinely better investment opportunities, as the expanded feasible set includes portfolios that dominate those available with only the primary tickers. The practical implication is that by thoughtfully selecting low-correlation assets to pair with our primary holdings, we can construct portfolios that offer superior risk-adjusted performance."
    ]
   },
   {
@@ -1746,7 +1744,15 @@
    "id": "ca9a0b9c",
    "metadata": {},
    "source": [
-    "__Answers here:__ Put your answers to the discussion questions for task 3 here."
+    "__Answers here:__ \n",
+    "\n",
+    "Based on the wealth trajectory plot, the SPY alternative portfolio (navy) achieved the highest terminal wealth by the end of the 2025 trading period, followed by the Primary+Twins portfolio (green), with the Primary portfolio (red) showing the lowest final wealth value. This ranking suggests that during this particular time period, the simple market index strategy outperformed both optimized portfolios.\n",
+    "\n",
+    "Regarding volatility characteristics, the Primary portfolio (red) appears to exhibit the highest volatility, with more pronounced fluctuations throughout the trading period. The Primary+Twins portfolio (green) shows noticeably smoother behavior with smaller oscillations, demonstrating the risk-reduction benefits of including low-correlation assets. The SPY alternative (navy) displays moderate volatility levels, falling between the two extremes but maintaining relatively steady growth throughout most of the period.\n",
+    "\n",
+    "The comparison reveals important practical insights about adding low-correlation assets for risk reduction. While the Primary+Twins portfolio successfully reduced volatility compared to the Primary portfolio alone, it did not outperform the simple SPY strategy in terms of terminal wealth. This suggests that although diversification through low-correlation assets effectively reduces portfolio variance (as predicted by theory and observed in the smoother trajectory), lower variance does not automatically translate to higher returns. The Primary+Twins portfolio achieved its objective of risk reduction but at the cost of some return potential during this specific period.\n",
+    "\n",
+    "Given these observations, I would not necessarily recommend the complexity of maintaining the Primary+Twins portfolio over the simpler SPY alternative for most investors. The SPY strategy offers several advantages: it requires minimal active management, has lower transaction costs, provides broad market exposure, and in this case delivered superior returns. The Primary+Twins portfolio does successfully reduce risk relative to the Primary portfolio, but the added complexity of tracking 40 positions (20 primary plus 20 twins), rebalancing requirements, and higher transaction costs may not justify the benefits, especially when a simple SPY investment outperforms on both a return basis and offers reasonable risk characteristics. However, for investors with specific risk constraints or requirements to avoid high volatility, the Primary+Twins approach could still be valuable despite the lower returns, as it demonstrably achieves more stable wealth trajectories."
    ]
   },
   {
